objects/vlocity_ins__ContractProviderNetwork__c.object
<CustomObject>
    <description>In a service provider contract, the provider agrees to provide its services under one or more networks. This object holds that data. Master-detail child object of Contract.</description>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Provider Network</relationshipLabel>
        <relationshipName>ContractProviderNetwork</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Provider Network</relationshipLabel>
        <relationshipName>ContractProviderNetwork</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderFeeScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Fee Schedule</label>
        <referenceTo>vlocity_ins__ProviderFeeSchedule__c</referenceTo>
        <relationshipLabel>Contract Provider Network</relationshipLabel>
        <relationshipName>ContractProviderNetwork</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Network</label>
        <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
        <relationshipLabel>Contract Provider Network</relationshipLabel>
        <relationshipName>ContractProviderNetwork</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Provider Network</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Provider Network</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>